# raylib-2772

./: .gitmodules
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.c
app/src/main/cpp/cmake/: CPM.cmake
app/src/main/res/values/: strings.xml
