CMAKE_MINIMUM_REQUIRED (VERSION 3.22)
PROJECT (raylib-game)

INCLUDE (${CMAKE_CURRENT_SOURCE_DIR}/cmake/CPM.cmake)
CPMADDPACKAGE ("gh:raysan5/raylib#072e926")

SET (CMAKE_SHARED_LINKER_FLAGS
     "${CMAKE_SHARED_LINKER_FLAGS} -u ANativeActivity_onCreate")

FILE (GLOB GAME_SOURCES *.c)
ADD_LIBRARY (
    ${PROJECT_NAME} SHARED
    ${GAME_SOURCES})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} raylib)
