CMAKE_MINIMUM_REQUIRED (VERSION 3.22)
PROJECT (raylib-game)

ADD_SUBDIRECTORY (${CMAKE_CURRENT_SOURCE_DIR}/raylib)

SET (CMAKE_SHARED_LINKER_FLAGS
     "${CMAKE_SHARED_LINKER_FLAGS} -u ANativeActivity_onCreate")

FILE (GLOB GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
ADD_LIBRARY (
    ${PROJECT_NAME} SHARED
    ${GAME_SOURCES})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} raylib)
